fixed button refresh issue and added phone number

--- a/invoice.html
+++ b/invoice.html
@@ -50,7 +50,7 @@
               <table>
                 <tr>
                   <td>
-                    TVH Computers<br> 1421 Rt 209 STE #116<br> Brodheadsville, PA. 18322
+                    TVH Computers<br> 1421 Route 209 West End Plaza<br> Brodheadsville, PA. 18322 <br>570-801-7730
                   </td>
       
                   <td>
