updated warranty paper

--- a/warranty.html
+++ b/warranty.html
@@ -157,6 +157,7 @@
         <div class="conditions">
         <h4>Your warranty includes the following:</h4>
         <ul>
+          <li>There is no return policy. Please make sure you want the computer. If you change your mind, you will be stuck with a computer you don't want. (BUT WHAT IF IT DOES NOT WORK?) We fix it! Call us -- don't rush to another place to buy a replacement.</li>
           <li>Hardware coverage for the entire computer. If any component on your computer fails, it will be replaced. This does not include accidental damage such as cracked screens or liquid damage.</li>
           <li>Battery and charger replacement guarantee for one year. If your battery or charger fails, it will be replaced.</li>
           <li>Life-time technical support at no charge on this computer. If you need assistance with using any aspect of your computer and the included software we will assist you in store.</li>
